--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -7,10 +7,10 @@
       </div>
     </div>
   </div>
-  <div ng-if="!sideMenuVisibility" class="row" style="{{mobileView ? ';':';'}};padding:15px;text-align:center">
+  <div ng-if="!sideMenuVisibility" class="row" style="padding:15px;text-align:center">
     <img ng-src="{{brandLogo}}" class="img img-circle" style="width:50px;float: none;">
   </div>
-  <div class="row" style="{{sideMenuVisibility ? 'border-bottom:solid 2px #eeeeee;':''}}; margin:0px;">
+  <div class="row" style="margin:0px;">
     <div class="container-fluid">
       <div class="col-md-3 basicAppLink text-center" ng-repeat="a in fixedApps" ng-class="{active: $state.is(a.state)}" ng-click="$state.go(a.state)">
         <span>
@@ -24,17 +24,17 @@
     <div class="container-fluid">
       <ul class="nav nav-sidebar" style="width:100%;">
         <li ng-class="{active: $state.includes(a.state)}" ng-repeat="a in apps" ng-mouseover="onHover=true" ng-mouseleave="onHover=false">
-          <a ui-sref="{{a.state}}" style="padding:15px;{{ onHover&&!sideMenuVisibility ? 'width:20rem;border-radius:0 3rem 3rem 0' : ''}}">
+          <a ui-sref="{{a.state}}" style="{{ onHover&&!sideMenuVisibility ? 'width:20rem;border-radius:0 3rem 3rem 0' : ''}}">
             <div ng-if="sideMenuVisibility" align="left">
               <div class="row container-fluid" >
-                <div style="display:flex;padding-left:1rem">
-                  <i style="padding:4px 0px;font-size:1.333333rem" class="fa {{a.icon}} fa-lg"></i>
-                  <span style="padding-left:5px">{{a.dispName | humanize}}</span>
+                <div style="display:flex;">
+                  <i style="font-size:1.333333rem" class="fa {{a.icon}} fa-lg"></i>
+                  <span style="">{{a.dispName | humanize}}</span>
                 </div>
               </div>
             </div>
-            <div ng-if="!sideMenuVisibility" align="left" style="padding-bottom:15px;overflow-x:visible;"><i class="fa {{a.icon}} fa-lg pull-left zoomOnHover" style="margin-left:15px;"></i>
-              <span ng-if="onHover" class="pull-right">{{a.dispName | humanize}}</span>
+            <div ng-if="!sideMenuVisibility" align="left" style="padding-bottom:2.5rem;overflow-x:visible;"><i class="fa {{a.icon}} fa-lg pull-left" style="padding:0.2rem 1.3rem;"></i>
+              <span style="font-size:1.3rem" ng-if="onHover" class="pull-right">{{a.dispName | humanize}}</span>
             </div>
           </a>
         </li>
