--- a/support/static/ngTemplates/app.sessionHistory.html
+++ b/support/static/ngTemplates/app.sessionHistory.html
@@ -117,7 +117,7 @@
                       </div>
                       <div class="form-group">
                         <label> Select Date </label>
-                        <div class="input-group">
+                        <div class="input-group removeGradientBtn">
                           <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -272,7 +272,7 @@
                       </div>
                       <div class="form-group">
                         <label> Select Date </label>
-                        <div class="input-group">
+                        <div class="input-group removeGradientBtn">
                           <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
