--- a/tools/static/ngTemplates/app.tools.archive.html
+++ b/tools/static/ngTemplates/app.tools.archive.html
@@ -28,7 +28,7 @@
 
             <div class="form-group">
               <label>Dated </label>
-              <div class="input-group">
+              <div class="input-group removeGradientBtn">
                 <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.dated" is-open="status.opened" />
                 <span class="input-group-btn">
                 <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
