--- a/finance/static/ngTemplates/app.finance.inboundInvoices.html
+++ b/finance/static/ngTemplates/app.finance.inboundInvoices.html
@@ -1,6 +1,41 @@
 <breadcrumb></breadcrumb>
 <div class="container-fluid">
-
+  <div class="container-fluid">
+    <uib-tabset>
+      <uib-tab>
+        <uib-tab-heading>
+          New <i class="fa fa-plus"></i>
+        </uib-tab-heading>
+        <div style="margin-top:20px;" ng-include="'/static/ngTemplates/app.finance.inboundInvoices.form.html'">
+        </div>
+      </uib-tab>
+      <uib-tab active="searchTabActive">
+        <uib-tab-heading>
+          Browse
+          <i class="fa fa-list-ul"></i>
+        </uib-tab-heading>
+        <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
+  </uib-tab>
+  <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
+    <uib-tab-heading>
+      {{tab.title}}
+      <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
+    </uib-tab-heading>
+    <div ng-if="tab.app == 'edit'">
+      <div ng-include="'/static/ngTemplates/app.finance.inboundInvoices.form.html'"></div>
+    </div>
+    <div ng-if="tab.app == 'details'">
+      <div ng-include="'/static/ngTemplates/app.finance.inboundInvoices.explore.html'"></div>
+    </div>
+    <!-- <div ng-if="tab.app == 'selected'">
+      <div ng-include="'/static/ngTemplates/app.recruitment.jobs.selected.html'"></div>
+    </div>
+    <div ng-if="tab.app == 'applicant'">
+      <div ng-include="'/static/ngTemplates/app.recruitment.jobs.applicant.html'"></div>
+    </div> -->
+  </uib-tab>
+  </uib-tabset>
+</div>
 
 
 
