--- a/finance/static/ngTemplates/app.finance.accounts.explore.html
+++ b/finance/static/ngTemplates/app.finance.accounts.explore.html
@@ -1,49 +1,45 @@
 <div class="container-fluid" ng-controller="businessManagement.finance.accounts.explore">
   <!-- {{account}} -->
   <div class="row">
-    <h3 class="text-muted" style="margin-left:15px;">Details</h3>
+    <h3 class="text-muted" style="margin-left:15px;">{{account.title}}</h3>
     <div class="col-md-6">
 
       <table class="table table-bordered">
         <tr>
-          <td>
-            <strong>Number</strong>
+          <td><strong>Number</strong>
           </td>
-          <td>
-            {{account.number}}
+          <td>{{account.number}}
           </td>
         </tr>
         <tr>
-          <td>
-            <strong>IFSC</strong>
+          <td><strong>IFSC</strong>
           </td>
-          <td>
-            {{account.ifsc}}
+          <td>{{account.ifsc}}
           </td>
         </tr>
         <tr>
-          <td>
-            <strong>Bank</strong>
+          <td><strong>Bank</strong>
           </td>
-          <td>
-            {{account.bank | uppercase}} <br>
+          <td>{{account.bank | uppercase}} <br>
             <img ng-src="{{getBankIcon(account.bank)}}" class="img-thumbnail" width="50"/>
           </td>
         </tr>
         <tr>
-          <td>
-            <strong>Address</strong>
+          <td><strong>Address</strong>
           </td>
-          <td>
-            {{account.bankAddress}}
+          <td>{{account.bankAddress}}
           </td>
         </tr>
         <tr>
-          <td>
-            <strong>Contact Person</strong>
+          <td><strong>Balance</strong>
           </td>
-          <td>
-            {{account.contactPerson | getName}} <br><img ng-src="{{account.contactPerson | getDP}}" class="img-circle" width="50"/>
+          <td>{{account.balance}}
+          </td>
+        </tr>
+        <tr>
+          <td><strong>Contact Person</strong>
+          </td>
+          <td>{{account.contactPerson.pk | getName}} <br><img ng-src="{{account.contactPerson.pk | getDP}}" class="img-circle" width="50"/>
           </td>
         </tr>
 
