minor ui changes

--- a/ERP/static/ngTemplates/app.ERP.settings.menu.html
+++ b/ERP/static/ngTemplates/app.ERP.settings.menu.html
@@ -1,7 +1,7 @@
-<div class="row" style="padding-left:40%; padding-top:20px;">
+<div class="row" style="padding-left:40%; padding-top:20px;color:var(--themeMain)">
   <i class="fa fa-cogs fa-4x"></i>
 </div>
-<h4 style="text-align:center;">
+<h4 style="text-align:center;color:var(--themeMain)">
   Global Settings
 </h4>
 <hr>
