--- a/projects/static/ngTemplates/app.projects.explore.html
+++ b/projects/static/ngTemplates/app.projects.explore.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="col-md-2 col-md-offset-10" style="padding:0px;background: -moz-linear-gradient(bottom,rgba(255,0,0,0),rgba(212, 212, 212, 1));min-height:400px;">
-      <ul class="nav nav-sidebar" style="width:100%;">
+      <ul class="nav nav-center" style="width:100%;">
         <li class="{{explore.mode == 'git' ? 'active':''}} text-center" ng-click="changeExploreMode('git')"><a href=""><i class="octicon octicon-repo-push mega-octicon"></i></a></li>
         <li class="{{explore.mode == 'tasks' ? 'active':''}} text-center" ng-click="changeExploreMode('tasks')"><a href=""><i class="fa fa-check-square-o fa-2x"></i></a></li>
         <li class="{{explore.mode == 'timeline' ? 'active':''}} text-center" ng-click="changeExploreMode('timeline')"><a href=""><i class="fa fa-commenting fa-2x"></i></a></li>
